# Voice-AI-Lead-Qualification-Agent-Calls-Your-Leads-in-Under-60-Seconds

./: .env  .env.sample  .gitignore  .viminfo  README.md  compose.yaml
AI-Voice-Agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt
Google Apps Script/: form-to-lk-call.gs  summarize-call-google-sheets.gs
LK-Call-Initiator/: Dockerfile  pyproject.toml  requirements.txt
LK-Call-Initiator/app/: main.py
LK-Webhook/: Dockerfile  pyproject.toml
LK-Webhook/app/: main.py
PydanticAI-Agent/: Dockerfile  pyproject.toml  requirements.txt
PydanticAI-Agent/app/: main.py
